--- a/views/a02_精神與永續使命.twig
+++ b/views/a02_精神與永續使命.twig
@@ -18,45 +18,45 @@
 <h3>台灣高鐵響應聯合國永續發展目標之措施</h3>
 
 
-<div class="table_desktop">
-	<table >
+	<div class="word_size">
+		<table width="100%">
 		<tr >
-			<th style="width:20%">永續發展目標</th>
-			<th style="width:80%">台灣高鐵措施</th>
+			<th bgcolor="#db5106" scope="col" style="padding:8px; color:#FFF;" width="20%">永續發展目標</th>
+			<th bgcolor="#db5106" scope="col" style="padding:8px; color:#FFF;" width="80%">台灣高鐵措施</th>
 		</tr>
 		<tr >
-			<td >確保有教無類、公平以及高品質的教育</td>
-			<td >與大專院校合作，透過產學合作與實習計畫促進台灣軌道業人才培育</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">確保有教無類、公平以及高品質的教育</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">與大專院校合作，透過產學合作與實習計畫促進台灣軌道業人才培育</td>
 		</tr>
 		<tr >
-			<td >促進包容且永續的經濟成長</td>
-			<td >各車站帶動當地經濟發展，且活化各地大眾交通工具的使用</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">促進包容且永續的經濟成長</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">各車站帶動當地經濟發展，且活化各地大眾交通工具的使用</td>
 		</tr>
 		<tr >
-			<td >建立具有韌性的基礎建設並加速創新</td>
-			<td >第一條台灣高速鐵路的基礎建設，提供在地高鐵建設的知識，並且積極推行在地化供應，提升在地廠商能力 <br>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">建立具有韌性的基礎建設並加速創新</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">第一條台灣高速鐵路的基礎建設，提供在地高鐵建設的知識，並且積極推行在地化供應，提升在地廠商能力 <br>
 				持續檢視站體、設備及路線的耐候性，並適時提升設計門檻，打造具韌性之基礎設施</td>
 		</tr>
 		<tr >
-			<td >促使城市具包容、安全、韌性及永續性</td>
-			<td >串連不同城市，連結南北都會與鄉村資源，縮短交通時間，降低城鄉差距<br>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">促使城市具包容、安全、韌性及永續性</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">串連不同城市，連結南北都會與鄉村資源，縮短交通時間，降低城鄉差距<br>
 				貼心的服務、軟硬體設備及配套措施，協助降低特定族群出遊的不便及門檻<br>
 				提升基礎設施之韌性</td>
 		</tr>
 		<tr >
-			<td >採取緊急措施以因應氣候變遷及其影響</td>
-			<td >除身為低碳運輸公共載具，提供旅客更綠色的選擇，我們亦透過節能駕駛與設備設定，持續提升並管理運行能效<br>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">採取緊急措施以因應氣候變遷及其影響</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">除身為低碳運輸公共載具，提供旅客更綠色的選擇，我們亦透過節能駕駛與設備設定，持續提升並管理運行能效<br>
 				導入綠建築車站設計，搭配再生能源發電設施，從多面向降低環境衝擊<br>
 				透過氣候變遷調適等措施因應氣候對行車影響<br>
 			</td>
 		</tr>
 		<tr >
-			<td >促進土地的永續使用及維護生物多樣性</td>
-			<td >通過環保署環評，並且依據環評結果持續護育各地的環境與生物</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">促進土地的永續使用及維護生物多樣性</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">通過環保署環評，並且依據環評結果持續護育各地的環境與生物</td>
 		</tr>
 		<tr >
-			<td >全球夥伴關係</td>
-			<td >加入國際鐵道聯盟（UIC），透過該組織參與聯合國氣候變遷綱要公約NAZCA之氣候追蹤項目，共同承諾將依據1990年的排碳水準，2030年降低50%、2050年降低75%的排碳量</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">全球夥伴關係</td>
+			<td align="left" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">加入國際鐵道聯盟（UIC），透過該組織參與聯合國氣候變遷綱要公約NAZCA之氣候追蹤項目，共同承諾將依據1990年的排碳水準，2030年降低50%、2050年降低75%的排碳量</td>
 		</tr>
 		
 	</table>
