--- a/views/a03_永續經營.twig
+++ b/views/a03_永續經營.twig
@@ -16,50 +16,50 @@
 	<h2 class="articleTitleContent">財務解決方案執行狀況及時程</h2>
 </div>
 
-<div class="table_desktop">
-	<table >
-		<tr >
-			<th style="width:20%">日期</th>
-			<th style="width:80%">事件</th>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/06/05</td>
-			<td style="width:80%">立法院完成審議「高鐵財務解決方案」並准予備查</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/07/27</td>
-			<td style="width:80%">台灣高鐵與交通部簽署「興建營運合約第四次增修協議書」及「站區開發合約終止協議書」</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/08/03</td>
-			<td style="width:80%">台灣高鐵與交通部、臺灣銀行簽署「三方契約第一次增修協議書」。台灣高鐵與臺灣銀行等銀行團簽署「聯合授信契約第二次增修契約」</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/08/07</td>
-			<td style="width:80%">動用「資金專戶」之資金收回全數特別股股本<br>
-			2015年6 月25 日董事會決議，收回已發行流通在外之全部特別股股本新臺幣40,189,916,600元</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/09/10</td>
-			<td style="width:80%">股東臨時會決議通過辦理「高鐵財務解決方案」各項配套措施 <br>
-			辦理減資60%以彌補虧損，減少實收資本額新臺幣39,079,395,890元，減資後實收資本額為新臺幣26,052,930,580元 <br>
-			辦理私募普通股增資新臺幣300億元以充實營運資金並改善財務結構，增資後實收資本額為新臺幣56,052,930,580元</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/10/30</td>
-			<td style="width:80%">特許期延長35年開始生效</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2016/10/25</td>
-			<td style="width:80%">現金增資，公開發行普通股<br>
-				配合辦理股票初次上市作業，現金增資發行新股2,300萬股，增資後普通股股數由5,605,293,058股，增加為5,628,293,058股</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2016/10/27</td>
-			<td style="width:80%">台灣高鐵上市</td>
-		</tr>
-	</table>
-
+	<div class="word_size">
+			<table width="100%">
+			<tr >
+				<th align="center" width="20%" >日期</th>
+				<th align="center"width="80%">事件</th>
+			</tr>
+			<tr >
+				<td align="center" >2015/06/05</td>
+				<td >立法院完成審議「高鐵財務解決方案」並准予備查</td>
+			</tr>
+			<tr >
+				<td align="center" >2015/07/27</td>
+				<td >台灣高鐵與交通部簽署「興建營運合約第四次增修協議書」及「站區開發合約終止協議書」</td>
+			</tr>
+			<tr >
+				<td align="center" >2015/08/03</td>
+				<td >台灣高鐵與交通部、臺灣銀行簽署「三方契約第一次增修協議書」。台灣高鐵與臺灣銀行等銀行團簽署「聯合授信契約第二次增修契約」</td>
+			</tr>
+			<tr >
+				<td align="center" >2015/08/07</td>
+				<td >動用「資金專戶」之資金收回全數特別股股本<br>
+				2015年6 月25 日董事會決議，收回已發行流通在外之全部特別股股本新臺幣40,189,916,600元</td>
+			</tr>
+			<tr >
+				<td align="center" >2015/09/10</td>
+				<td >股東臨時會決議通過辦理「高鐵財務解決方案」各項配套措施 <br>
+				辦理減資60%以彌補虧損，減少實收資本額新臺幣39,079,395,890元，減資後實收資本額為新臺幣26,052,930,580元 <br>
+				辦理私募普通股增資新臺幣300億元以充實營運資金並改善財務結構，增資後實收資本額為新臺幣56,052,930,580元</td>
+			</tr>
+			<tr >
+				<td align="center" >2015/10/30</td>
+				<td >特許期延長35年開始生效</td>
+			</tr>
+			<tr >
+				<td align="center" >2016/10/25</td>
+				<td >現金增資，公開發行普通股<br>
+					配合辦理股票初次上市作業，現金增資發行新股2,300萬股，增資後普通股股數由5,605,293,058股，增加為5,628,293,058股</td>
+			</tr>
+			<tr >
+				<td align="center">2016/10/27</td>
+				<td >台灣高鐵上市</td>
+			</tr>
+		</table>
+	</div>
 	<div class="articleTitle">
 		<h2 class="articleTitleContent">永續及社會效益</h2>
 	</div>
@@ -72,8 +72,6 @@
 	</p>
 	
 	<img src="http://www.thsrc.com.tw/event/tmp/img/a03-02.jpg" alt="" style="width: 70%">
-
-</div>
 
 
 </article>
