--- a/views/a06_利害關係人專區.twig
+++ b/views/a06_利害關係人專區.twig
@@ -12,9 +12,9 @@
 	<p>台灣高鐵的利害關係人廣泛多元，為呈現出具有代表性之利害關係人，我們參照AA1000 利害關係人參與標準（AA1000 Stakeholder Engagement Standard），依重要性篩選出八類重要利害關係人：旅客、社區居民、媒體、員工、股東/投資人、非政府組織（NGO）、供應商/承包商、政府/主管機關 台灣高鐵持續與不同利害關係人溝通合作，2015與2016年與主要8類利害關係人透過定期與不定期的多元溝通管道，激盪出不同的成效和產生多元化的社會價值。針對各利害關係人族群關注的議題，我們除透過下列管道溝通說明外，亦透過此報告書之對應章節進行溝通。</p>
 
 	<h3>重要利害關係人溝通績效</h3>
-	<div class="table_desktop">
-	<table >
-		<tr align="center" bgcolor="#ff6600" style="color: rgb(255, 255, 255);" valign="middle">
+	<div class="word_size">
+		<table width="100%">
+		<tr align="center" >
 			<th style="width:20%">利害關係人</th>
 			<th style="width:20%">溝通管道 </th>
 			<th style="width:20%">2015年重點溝通績效</th>
@@ -243,12 +243,8 @@
 				<p>氣候變遷調適策略</p>
 			</td>
 		</tr>
-		
-
-
-
-
 	</table>
+	</div>
 
 	<div class="articleTitle">
 		<h2 class="articleTitleContent">永續及社會效益</h2>
