--- a/views/c02_環境管理.twig
+++ b/views/c02_環境管理.twig
@@ -12,8 +12,8 @@
 	<p>台灣高鐵是高運載、省能源及低污染的交通運輸系統，提供乘客舒適的旅程服務是我們的經營理念，而環境政策則是我們善盡企業責任的承諾。
 	</p>
 
-	<div class="table_desktop">
-		<table >
+	<div class="word_size">
+			<table width="100%">
 			<tr >
 				<th>台灣高鐵環境政策</th>
 			</tr>
