--- a/views/c03_能源與廢棄物管理.twig
+++ b/views/c03_能源與廢棄物管理.twig
@@ -39,17 +39,17 @@
 	<p>台灣高鐵於2014年11月成為國內首家取得「運輸服務碳足跡標籤」之交通運具，並在企業網站「企業社會責任專區」下建置「高速鐵路運輸服務碳足跡」專頁、在車上刊物T-Life及高鐵車票揭露碳標籤。台灣高鐵委託第三公證單位查驗，認證碳足跡為每人每公里運輸服務產生相當於38公克二氧化碳的溫室氣體排放量，約為小客車的1/2；若以高鐵2015年全年度載運之旅客里程數計算，較搭乘小客車大幅減少386,198公噸的二氧化碳量，相當於1,302 座大安森林公園的植樹面積；2016年較搭乘小客車減少419,534公噸的二氧化碳量，相當於1,414座大安森林公園的植樹面積。另配合苗栗、彰化、雲林及南港站開始營運，將於2017年12月16日碳標籤有效期限前，辦理盤查並查證高鐵運輸服務碳足跡，並向行政院環境保護署申請碳標籤效期展延3年。
 	</p>
 
-	<div class="table_desktop">
-		<table >
+	<div class="word_size">
+			<table width="100%">
 			<tr >
-				<th>
+				<td>
 					<img src="http://www.thsrc.com.tw/event/tmp/img/b17.jpg" alt="">
-					<p style="text-align: center; margin-top: -40px">碳足跡標籤</p>
-				</th>
-				<th>
+					<p style="text-align: center; margin-top: -10px">碳足跡標籤</p>
+				</td>
+				<td>
 					<img src="http://www.thsrc.com.tw/event/tmp/img/b18.jpg" alt="">
-					<p style="text-align: center; margin-top: -40px">碳足跡標籤證書授證典禮</p>
-				</th>
+					<p style="text-align: center; margin-top: -10px">碳足跡標籤證書授證典禮</p>
+				</td>
 			</tr>
 					
 			
@@ -61,31 +61,27 @@
 	</div>
 	<p>在水資源保護上，我們以節約用水、減量及回收再利用為用水管理政策。透過「節能專案小組」並定期（每季）召開場站節水成效檢討會議，並訂定隨列車旅次成長平均服務每名旅客用水量為節水指標。台灣高鐵車站、基地（含燕巢總機廠）及總公司之用水來源，皆為自來水，並無使用地下水。</p>
 
-	<div class="table_desktop">
-		<table >
+	<div class="word_size">
+			<table width="100%">
 			<tr >
-				<td style="width:30%">
-					<p>碳足跡標籤</p>
-				</td>
-				<td style="width:30%">
-					<p>碳足跡標籤證書授證典禮</p>
-				</td>
+				<th style="width:50%">碳足跡標籤</th>
+				<th style="width:50%">碳足跡標籤證書授證典禮</th>
 			</tr>			
 			<tr >
 				<td>
-					<p>建立自來水用水登錄及用量檢核機制</p>
-					<p>每日控管用水並由機電設施維護人員進行用水設施巡查</p>
-					<p>每月檢測放流水質以符合放流水標準並定期申報，確保處理後水質可回收於噴灌使用</p>
+					建立自來水用水登錄及用量檢核機制<br>
+					每日控管用水並由機電設施維護人員進行用水設施巡查<br>
+					每月檢測放流水質以符合放流水標準並定期申報，確保處理後水質可回收於噴灌使用<br>
 				</td>
 				<td>
-					<p>廁所換裝感應式節水設備</p>
-					<p>收集雨水，儲存於滯洪池後再利用於廠區植栽澆灌使用</p>
-					<p>提高污水處理廠放流水回收利用於植栽噴灌用量</p>
-					<p>中央空調冰水系統並聯運轉減少冷卻水塔水量蒸發及飛散損失量</p>
-					<p>改善左營及烏日基地列車洗車機</p>
-					<p>縮減噴灌設備操作次數及噴水動作時間</p>
-					<p>改善列車維修流程以減少維修用水量</p>
-					<p>宣導惜水，加強員工節水教育</p>
+					廁所換裝感應式節水設備<br>
+					收集雨水，儲存於滯洪池後再利用於廠區植栽澆灌使用<br>
+					提高污水處理廠放流水回收利用於植栽噴灌用量<br>
+					中央空調冰水系統並聯運轉減少冷卻水塔水量蒸發及飛散損失量<br>
+					改善左營及烏日基地列車洗車機<br>
+					縮減噴灌設備操作次數及噴水動作時間<br>
+					改善列車維修流程以減少維修用水量<br>
+					宣導惜水，加強員工節水教育<br>
 				</td>
 			</tr>
 					
@@ -94,30 +90,30 @@
 	</div>
 	
 	<h3>而節水措施的效益如下：</h3>
-	<div class="table_desktop">
-		<table >
-			<tr >
-				<td style="width:30%">
-					<p>基地之節水效益</p>
-				</td >
-				<td style="width:30%">
-					<p>車站之節水效益</p>
-				</td>
-				<td style="width:40%">
-					<p>全公司之節水效益</p>
-				</td>
-			</tr>
-			<tr >
-				<td>
-					<p>基地平均服務每名旅客用水度數由2009年0.0056度逐年降低至2016年0.0029度，平均每年節水率達10%。</p>
-				</td >
-				<td>
-					<p>平均服務每名旅客用水費由2009年之0.024度降低至2016年0.014度，平均每年節水率達8%。</p>
-				</td>
-				<td>
-					<p>由最高之0.0215度，減至2016年之0.0181度，總節水率已達10%。</p>
-				</td>
-			</tr>			
+		<div class="word_size">
+			<table width="100%">
+				<tr >
+					<th style="width:30%">
+						基地之節水效益
+					</th >
+					<th style="width:30%">
+						車站之節水效益
+					</th>
+					<th style="width:40%">
+						全公司之節水效益
+					</th>
+				</tr>
+				<tr >
+					<td>
+						<p>基地平均服務每名旅客用水度數由2009年0.0056度逐年降低至2016年0.0029度，平均每年節水率達10%。</p>
+					</td >
+					<td>
+						<p>平均服務每名旅客用水費由2009年之0.024度降低至2016年0.014度，平均每年節水率達8%。</p>
+					</td>
+					<td>
+						<p>由最高之0.0215度，減至2016年之0.0181度，總節水率已達10%。</p>
+					</td>
+				</tr>			
 		</table>
 	</div>
 	<p>我們於維修基地針對員工生活垃圾及列車維修產出廢棄物，與車站員工及旅客生活垃圾，推動廢棄物回收，回收廢棄物品項含紙類、寶特瓶、廢鋁、廢鐵、廢塑膠、廢木材、燈管、光碟片、鉛蓄電池、廢潤滑油等，統計2016年廢棄物處理總量達8,228噸，其中委託合格清除業者清運至焚化爐處理之廢棄物量7,293噸，資源廢棄物回收率約11%，回收量達935公噸，皆透過再利用廠商清運處理。</p>
@@ -128,15 +124,15 @@
 	</div>
 	<p>台灣高鐵除積極執行行車運輸的低碳措施，也從營運面做起，在各辦公大樓推動節能環保措施，支持環境永續不遺餘力。</p>
 	
-	<div class="table_desktop">
-		<table >
+	<div class="word_size">
+			<table width="100%">
 			<tr >
-				<td style="width:50%">
-					<p>「公文管理系統」線上簽核</p>
-				</td >
-				<td style="width:50%">
-					<p>高鐵總公司實施空調、照明和電力系統的節約能源措施</p>
-				</td>
+				<th style="width:50%">
+					「公文管理系統」線上簽核
+				</th >
+				<th style="width:50%">
+					高鐵總公司實施空調、照明和電力系統的節約能源措施
+				</th>
 				
 			</tr>
 			<tr >
