--- a/views/e01_供應鏈管理.twig
+++ b/views/e01_供應鏈管理.twig
@@ -45,36 +45,36 @@
 	<div class="word_size">
 		<table width="100%">
 			<tr>
-				<th bgcolor="#db5106" scope="col" style="padding:8px; color:#FFF;" width="30%"></th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="30%">2015</th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="40%">2016</th>
+				<th width="30%"></th>
+				<th width="30%">2015</th>
+				<th width="40%">2016</th>
 			
 			</tr>
 			<tr>
 				<th bgcolor="#EFEFEF" scope="col" style="padding:8px;">向國內供應商採購金額 （$NT） </th>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">  4,754,278,761 </p>
+					 4,754,278,761 
 				</td>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 1,130,465,631 </p>
+					1,130,465,631 
 				</td>
 			</tr>
 			<tr>
 				<th bgcolor="#EFEFEF" scope="col" style="padding:8px;">總採購金額 （$NT）  </th>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">  5,338,792,773  </p>
+					 5,338,792,773  
 				</td>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 1,265,089,448 </p>
+					1,265,089,448 
 				</td>
 			</tr>
 			<tr>
 				<th bgcolor="#EFEFEF" scope="col" style="padding:8px;">向國內供應商採購金額百分比（%）  </th>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 89.05%  </p>
+					89.05%  
 				</td>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 89.36% </p>
+					89.36% 
 				</td>
 			</tr>
 			
