--- a/views/e02_綠色採購.twig
+++ b/views/e02_綠色採購.twig
@@ -13,38 +13,24 @@
 	<div class="word_size">
 		<table width="100%">
 			<tr>
-				<th bgcolor="#db5106" scope="col" style="padding:8px; color:#FFF;" width="30%">年度</th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="10%">2010</th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="10%">2011</th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="10%">2012</th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="10%">2013</th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="10%">2014</th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="10%">2015</th>
-				<th bgcolor="#db5106" scope="col" style="color:#FFF;" width="10%">2016</th>
+				<th width="30%">年度</th>
+				<th width="10%">2010</th>
+				<th width="10%">2011</th>
+				<th width="10%">2012</th>
+				<th width="10%">2013</th>
+				<th width="10%">2014</th>
+				<th width="10%">2015</th>
+				<th width="10%">2016</th>
 			</tr>
 			<tr>
-				<th bgcolor="#EFEFEF" scope="col" style="padding:8px;">向國內供應商採購金額 （$NT） </th>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">1,064 </p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 1,080 </p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 1,196 </p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 923 </p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 1,623 </p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 3,814 </p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0"> 1,098 </p>
-				</td>
+				<th >向國內供應商採購金額 （$NT） </th>
+				<td align="center">1,064 </td>
+				<td align="center">1,080 </td>
+				<td align="center">1,196 </td>
+				<td align="center">923 </td>
+				<td align="center">1,623 </td>
+				<td align="center">3,814 </td>
+				<td align="center">1,098 </td>
 
 			</tr>
 
