--- a/views/f03_關懷社會.twig
+++ b/views/f03_關懷社會.twig
@@ -13,46 +13,24 @@
 	<div class="word_size">
 		<table width="100%">
 			<tr>
-				<td align="center" width="30%" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0; color: #FFF">年份</p>
-				</td>
-				<td align="center"  width="30%" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0; color: #FFF">2015</p>
-				</td>
-				<td align="center"  width="40%" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0; color: #FFF">2016 </p>
-				</td>
+				<th align="center" width="30%">年份</th>
+				<th align="center"  width="30%">2015</th>
+				<th align="center"  width="40%">2016 </th>
 				
 			</tr>			
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">開放站點</p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">桃園站、新竹站、台中站、嘉義站、台南站、左營站（共6站）</p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">桃園站、新竹站、苗栗站、台中站、彰化站、雲林站、嘉義站、台南站、左營站（新增3站，共9站）</p>
-				</td>
+				<td align="center" >開放站點</td>
+				<td align="center">桃園站、新竹站、台中站、嘉義站、台南站、左營站（共6站）</td>
+				<td align="center">桃園站、新竹站、苗栗站、台中站、彰化站、雲林站、嘉義站、台南站、左營站（新增3站，共9站）</td>
 			</tr>		
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">表演場數</p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">71</p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">136</p>
-				</td>
+				<td align="center" >表演場數</td>
+				<td align="center">71</td>
+				<td align="center">136</td>
 			</tr>				
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">表演人數</p>
-				</td>
-				<td align="center" colspan="2" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">5,688</p>
-				</td>
+				<td align="center" >表演人數</td>
+				<td align="center" colspan="2">5,688</td>
 				
 			</tr>		
 		</table>
@@ -61,10 +39,10 @@
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e15.jpg" alt="">
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e16.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2015、2016年藝起來高鐵活動照片</p>
+	<p style="text-align: center; margin-top: -10px">2015、2016年藝起來高鐵活動照片</p>
 
 
-	<h2>人文關懷</h2>
+	<h5>人文關懷</h5>
 	<p>2015至2016年，台灣高鐵投入社會公益關懷之募款與贊助金額累積達新臺幣2仟712萬4,040元；展望未來，高鐵公司將利用既有資源，發揮真實接觸的暖心精神，持續投入微笑列車與助學計畫並積極經營，讓更多在地需要被關懷的弱勢族群感受溫暖。</p>
 
 	<div class="articleTitle">
@@ -75,9 +53,9 @@
 	</p>
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e17.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2015年高速傳愛計畫活動照片/兒福聯盟（邀請屏東佳義國小原住民小朋友表演）</p>
+	<p style="text-align: center; margin-top: -10px">2015年高速傳愛計畫活動照片/兒福聯盟（邀請屏東佳義國小原住民小朋友表演）</p>
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e18.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2016年高速傳愛計畫活動照片/依甸基金會</p>
+	<p style="text-align: center; margin-top: -10px">2016年高速傳愛計畫活動照片/依甸基金會</p>
 
 
 	<div class="articleTitle">
@@ -91,38 +69,19 @@
 	<div class="word_size">
 		<table width="100%">
 			<tr>
-				<td align="center" width="30%" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0; color: #FFF">年份</p>
-				</td>
-				<td align="center"  width="30%" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0; color: #FFF">2015</p>
-				</td>
-				<td align="center"  width="40%" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0; color: #FFF">2016 </p>
-				</td>
-				
+				<th align="center" width="30%">年份</th>
+				<th align="center"  width="30%">2015</th>
+				<th align="center"  width="40%">2016 </th>
 			</tr>			
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">人數</p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">517人</p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">660人</p>
-				</td>
+				<td align="center" >人數</td>
+				<td align="center">517人</td>
+				<td align="center">660人</td>
 			</tr>		
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">袋數</p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">746袋</p>
-				</td>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0">949袋</p>
-				</td>
+				<td align="center" >袋數</td>
+				<td align="center">746袋</td>
+				<td align="center">949袋</td>
 			</tr>				
 				
 		</table>
@@ -131,7 +90,7 @@
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e19.jpg" alt="">
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e20.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">捐血傳愛活動照片</p>
+	<p style="text-align: center; margin-top: -10px">捐血傳愛活動照片</p>
 
 
 	<div class="articleTitle">
@@ -141,7 +100,7 @@
 	
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e21.jpg" alt="">
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e22.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">微笑列車乘客歡樂合影照片</p>
+	<p style="text-align: center; margin-top: -10px">微笑列車乘客歡樂合影照片</p>
 
 
 	<div class="articleTitle">
@@ -151,9 +110,9 @@
 	</p>
 	
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e23.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2015年醫護人員南援北運專案</p>
+	<p style="text-align: center; margin-top: -10px">2015年醫護人員南援北運專案</p>
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e24.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2015年醫護人員南援北運專案</p>
+	<p style="text-align: center; margin-top: -10px">2015年醫護人員南援北運專案</p>
 
 
 
@@ -164,9 +123,9 @@
 	</p>
 	
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e25.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2016年臺南地震災區救援專案</p>
+	<p style="text-align: center; margin-top: -10px">2016年臺南地震災區救援專案</p>
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e26.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2016年臺南地震災區救援專案</p>
+	<p style="text-align: center; margin-top: -10px">2016年臺南地震災區救援專案</p>
 
 
 
@@ -177,7 +136,7 @@
 	</p>
 	
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e27.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">台灣高鐵送愛視障青年開展新視界</p>
+	<p style="text-align: center; margin-top: -10px">台灣高鐵送愛視障青年開展新視界</p>
 
 
 
@@ -189,7 +148,7 @@
 	</p>
 	
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e28.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">台灣高鐵協助樂齡長者一圓表演夢</p>
+	<p style="text-align: center; margin-top: -10px">台灣高鐵協助樂齡長者一圓表演夢</p>
 
 
 
@@ -200,10 +159,10 @@
 	</p>
 	
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e29.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2015年帶小樹苗去旅行活動照片</p>
+	<p style="text-align: center; margin-top: -10px">2015年帶小樹苗去旅行活動照片</p>
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e30.jpg" alt="">
-	<p style="text-align: center; margin-top: -40px">2016年帶小樹苗去旅行活動照片</p>
+	<p style="text-align: center; margin-top: -10px">2016年帶小樹苗去旅行活動照片</p>
 
 
 
