--- a/views/b01_營運據點與服務.twig
+++ b/views/b01_營運據點與服務.twig
@@ -17,22 +17,22 @@
 	<p>台灣高鐵除提供快捷、便利舒適的鐵路運輸服務外，亦有零售事業和商業空間租賃等附屬事業，藉此創造附加價值，並提升附屬事業收入。我們期許能成為台灣優質便利生活的代言品牌，並兼顧社會責任，為顧客滿意而努力。</p>
 
 	<h3>台灣高鐵之服務項目</h3>
-	<div class="table_desktop">
-		<table >
+	<div class="word_size">
+		<table width="100%">
 			<tr >
-				<th style="width:20%">項目</th>
+				<th align="center" style="width:20%">項目</th>
 				<th style="width:80%">內容</th>
 			</tr>
 			<tr >
-				<td >鐵路運輸</td>
+				<td align="center">鐵路運輸</td>
 				<td >快捷、便利又舒適的鐵路運輸服務，並有直達、半直達及站站停之列車停站模式符合民眾需求</td>
 			</tr>
 			<tr>
-				<td >販售</td>
+				<td align="center">販售</td>
 				<td >零售事業與推車販售等</td>
 			</tr>
 			<tr>
-				<td >租金等其他</td>
+				<td align="center">租金等其他</td>
 				<td >商業空間租賃（如便利商店、餐飲、服務櫃檯等）、車站附設停車場、媒體銷售（如燈箱、柱面、牆面、商品展覽、彩繪列車等）</td>
 			</tr>
 	
@@ -42,17 +42,17 @@
 	</p>
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/b02.jpg" alt="">
-	<p style="text-align: center; margin-top: -50px">2015年全年各通路所佔百分比</p>
+	<p style="text-align: center; margin-top: -30px">2015年全年各通路所佔百分比</p>
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/b03.jpg" alt="">
-	<p style="text-align: center; margin-top: -50px">2016年全年各通路所佔百分比</p>
+	<p style="text-align: center; margin-top: -30px">2016年全年各通路所佔百分比</p>
 
 	<p>台灣高鐵持續致力於拓展多元的售票管道，為提升服務質感而努力，除確保傳統購票通路運作順暢，亦響應行動支付，研擬更便利的票務服務。如台灣高鐵APP「T-EX 行動購票」上線至今已近5 年，亦不斷更新功能以提升使用便利性。我們亦持續精進車站售票作業流程及規劃，好縮短旅客等候時間。如為縮短台北車站排隊等候時間，我們於2016年開始分階段導入因應作為。</p>
 
 	<h3>台北車站排隊等候時間縮短措施</h3>
 
-	<div class="table_desktop">
-			<table >
+	<div class="word_size">
+			<table width="100%">
 				<tr >
 					<th style="width:20%">階段</th>
 					<th style="width:50%">規劃措施</th>
@@ -119,19 +119,19 @@
 		</div>
 		<p>我們研發「列車座位查詢系統（SMIS）」， 將車廂座位配置圖與旅客購票資料，轉換為可於智慧型手機上顯示之圖像資料，讓列車長能即時了解列車上旅客訂位票種、乘坐區間及各車廂乘坐人數，以利提供旅客高品質之服務與協助。提供暖心服務是我們的使命，站務員與乘務員會於車站協助需要乘車導引的旅客上車。在列車上， 列車長透過SMIS 使用內部乘車導引服務管理系統，掌握服務對象，視情況指派服勤員協助。列車到站後，乘務員會協助旅客下車並交接予站務人員。當突發狀況發生導致旅客需要車站協助時，列車長會回報旅客服務控制員其身分及相關資訊，以提供最周全服務。SMIS 系統於2011 年3 月上線啟用，於2013 年12 月新增補票功能，2015 年9 月取得經濟部專利，為國內軌道運輸業之首創應用，亦為國際首創結合驗票與旅客服務功能之系統。</p>
 		
-		<div class="table_desktop">
-		<table >
-			<tr >
-				<td>
-					<img src="http://www.thsrc.com.tw/event/tmp/img/b08.jpg" alt="">
-					<p>SMIS系統畫面</p>
-				</td>
-				<td>
-					<img src="http://www.thsrc.com.tw/event/tmp/img/b09.jpg" alt="">
-					<p>SMIS之經濟部專利證書</p> 
-				</td>
-			</tr>
-		</table>
+		<div class="word_size">
+			<table width="100%">
+				<tr >
+					<td align="center">
+						<img src="http://www.thsrc.com.tw/event/tmp/img/b08.jpg" alt="">
+						<p>SMIS系統畫面</p>
+					</td>
+					<td align="center">
+						<img src="http://www.thsrc.com.tw/event/tmp/img/b09.jpg" alt="">
+						<p>SMIS之經濟部專利證書</p> 
+					</td>
+				</tr>
+			</table>
 	</div>
 
 	<div class="articleTitle">
@@ -149,34 +149,24 @@
 
 	<p>在2016年因應復興航空歇業，為了讓旅客可以順利前往花蓮，依據高鐵與臺鐵互相接駁之適當班次，製作「台北-花蓮雙鐵轉乘時刻表」，放置於車站服務台，提供旅客參考。</p>
 	
-	<div class="table_desktop">
-		<table >
+	<div class="word_size">
+			<table width="100%">
 			<tr >
-				<td>
-					<p>類型</p>
-				</td>
-				<td>
-					<p>服務內容</p> 
-				</td>
+				<th>類型</th>
+				<th>服務內容 </th>
 			</tr>
 			<tr >
-				<td>
-					<p>例行轉乘服務</p>
-				</td>
-				<td>
-					<p>高鐵快捷公車、臺鐵、捷運、公車/客運、排班計程車、停車場、小客車租賃和無障礙接送。</p> 
-				</td>
+				<td>例行轉乘服務</td>
+				<td>高鐵快捷公車、臺鐵、捷運、公車/客運、排班計程車、停車場、小客車租賃和無障礙接送。 </td>
 			</tr>		
 			<tr >
+				<td>2016年新增轉乘服務</td>
 				<td>
-					<p>2016年新增轉乘服務</p>
-				</td>
-				<td>
-					<p>苗栗車站「101A 竹南線」和「101B 雪霸線」路線自 2016 年 12 月 2 日起，</p>
-					<p>調整部分班次發車時刻。</p>
-					<p>台中車站「161 高鐵台中站－中科管理局」路線自 2016 年 9 月 30 日起，繞</p>
-					<p>駛「臺中國家歌劇院」。</p>
-					<p>臺鐵新豐富車站將於2016年9月10日通車啟用，高鐵苗栗站轉乘更便利。</p>
+					苗栗車站「101A 竹南線」和「101B 雪霸線」路線自 2016 年 12 月 2 日起，
+					調整部分班次發車時刻。<br>
+					台中車站「161 高鐵台中站－中科管理局」路線自 2016 年 9 月 30 日起，繞
+					駛「臺中國家歌劇院」。<br>
+					臺鐵新豐富車站將於2016年9月10日通車啟用，高鐵苗栗站轉乘更便利。
 				</td>
 			</tr>
 		</table>
@@ -187,13 +177,13 @@
 	<p>台灣高鐵目前可提供運轉服務的列車計34組，列車時刻表規劃係配合不同時段之旅運需求，盡量將列車組資源投入載客之營運，提供最大運能以滿足高鐵旅運需求</p>
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/b12.jpg" alt="">
-	<p style="text-align: center; margin-top: -50px">營運績效表</p>
+	<p style="text-align: center; margin-top: -30px">營運績效表</p>
 	
 	<p>本公司各疏運計畫皆經過嚴謹的內部程序制定，並提報交通部備查後執行，2015和2016年計有元旦、春節、和平紀念日、清明節、勞動節、母親節、端午節、中秋節、國慶日等重要疏運計畫，總計2015年及2016年共分別疏運839.5萬人次及1,160.4萬人次。
 	</p>
 
 	<img src="http://www.thsrc.com.tw/event/tmp/img/b13.jpg" alt="">
-	<p style="text-align: center; margin-top: -50px">疏運規劃與執行圖</p>
+	<p style="text-align: center; margin-top: -30px">疏運規劃與執行圖</p>
 
 
 </article>
