--- a/views/f02_友善職場_m.twig
+++ b/views/f02_友善職場_m.twig
@@ -11,45 +11,45 @@
 	
 
 	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
+		<table align="center" width="700">
 			<tr>
-				<td align="center" width="20%" bgcolor="#EFEFEF" valign="middle" style="padding:8px; ">
-					<p style="margin: 0">召開勞資會議</p>
-				</td>
+				<th align="center" width="20%">
+					召開勞資會議
+				</th>
 				<td align="left" width="80%"  bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">第一屆事業單位勞資會議成立於2003年12月24日，事業場所勞資會議成立於2016年7月1日，此後定期每季舉辦勞資會議，勞資會議議題也依規定期間內提供給勞資雙方進行商議，勞資代表異動則依法令陳報主管機關備查。</p>
+					第一屆事業單位勞資會議成立於2003年12月24日，事業場所勞資會議成立於2016年7月1日，此後定期每季舉辦勞資會議，勞資會議議題也依規定期間內提供給勞資雙方進行商議，勞資代表異動則依法令陳報主管機關備查。
 				</td>
 			</tr>
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; ">
-					<p style="margin: 0">建立申訴制度</p>
-				</td>
+				<th align="center">
+					建立申訴制度
+				</th>
 				<td align="left"   bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">訂定及實施員工「申訴辦法」，以有效施行公司管理政策及維持員工關係之和諧。</p>
+					訂定及實施員工「申訴辦法」，以有效施行公司管理政策及維持員工關係之和諧。
 				</td>
 			</tr>
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; ">
-					<p style="margin: 0">性騷擾防治及申訴管道</p>
-				</td>
+				<th align="center">
+					性騷擾防治及申訴管道
+				</th>
 				<td align="left"   bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">依據性別工作平等法，並參考工作場所性騷擾防治措施申訴及懲戒辦法訂定準則，確保工作地點及在台灣高鐵職場工作者身心安全與身心保護，加強對員工有關性騷擾事件之防治及宣導，於新進人員教育訓練課程及E-learning平台中進行說明及宣導，並於公司外部網站、營業場所及工作場所張貼申訴專線、傳真，以有效防止公司內、外部性騷擾事件之發生。</p>
+					依據性別工作平等法，並參考工作場所性騷擾防治措施申訴及懲戒辦法訂定準則，確保工作地點及在台灣高鐵職場工作者身心安全與身心保護，加強對員工有關性騷擾事件之防治及宣導，於新進人員教育訓練課程及E-learning平台中進行說明及宣導，並於公司外部網站、營業場所及工作場所張貼申訴專線、傳真，以有效防止公司內、外部性騷擾事件之發生。
 				</td>
 			</tr>
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; ">
-					<p style="margin: 0">性別工作平等法</p>
-				</td>
+				<th align="center">
+					性別工作平等法
+				</th>
 				<td align="left"   bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">設置供旅客及員工使用之育嬰室、哺育室，以鼓勵並支持哺餵母乳政策。</p>
+					設置供旅客及員工使用之育嬰室、哺育室，以鼓勵並支持哺餵母乳政策。
 				</td>
 			</tr>
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px; ">
-					<p style="margin: 0">勞工健康保護規則</p>
-				</td>
-				<td align="left"   bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">於總公司、運務大樓及維修大樓設置醫護室；並於各營運車站設置優於相關法令規範之保健室，以提供旅客及員工緊急醫療協助。</p>
+				<th align="center">
+					勞工健康保護規則
+				</th>
+				<td align="left">
+					於總公司、運務大樓及維修大樓設置醫護室；並於各營運車站設置優於相關法令規範之保健室，以提供旅客及員工緊急醫療協助。
 				</td>
 			</tr>
 		</table>
@@ -64,29 +64,29 @@
 	<h5>2015與2016年重大勞資事件處理</h5>
 	
 	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
+		<table align="center" width="700">
 			<tr>
-				<td align="center" width="20%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">事件類型</p>
-				</td>
-				<td align="left" width="80%"  bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">處理說明</p>
+				<th align="center" width="20%">
+					事件類型
+				</th>
+				<td align="left" width="80%">
+					處理說明
 				</td>
 			</tr>
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">勞資糾紛訴訟</p>
-				</td>
-				<td align="left"   bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">為確認僱傭關係存在之訴案件，估計金額2,479,644元，本公司將遵照法院之判決續處。</p>
+				<th align="center">
+					勞資糾紛訴訟
+				</th>
+				<td align="left">
+					為確認僱傭關係存在之訴案件，估計金額2,479,644元，本公司將遵照法院之判決續處。
 				</td>
 			</tr>
 			<tr>
-				<td align="center"  bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">加班費爭議處理</p>
-				</td>
-				<td align="left"   bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">與高鐵工會於2016年1月21日達成雙方協議，就高鐵工會提出加班費之給付進行核算，並於2016年7月共同研商確認前述加班費之計算方式，依協議內容與行政法院之判決續處，已於2016年度財報估計提列負債準備餘額計298,455仟元。</p>
+				<th align="center">
+					加班費爭議處理
+				</th>
+				<td align="left">
+					與高鐵工會於2016年1月21日達成雙方協議，就高鐵工會提出加班費之給付進行核算，並於2016年7月共同研商確認前述加班費之計算方式，依協議內容與行政法院之判決續處，已於2016年度財報估計提列負債準備餘額計298,455仟元。
 				</td>
 			</tr>
 		</table>
@@ -98,11 +98,11 @@
 	<p>台灣高鐵以安全為所有決策和行動的最高指導原則，並制定安全衛生政策作為確保旅客、工作者和其他公眾安全健康的政策承諾，並於2017年4月更新。</p>
 	
 	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;">
+		<table align="center" width="500">
 			<tr>
-				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">台灣高鐵職業安全衛生政策</p>
-				</td>
+				<th align="center" >
+					台灣高鐵職業安全衛生政策
+				</th>
 			</tr>
 			<tr>
 				<td align="left"  bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
@@ -128,60 +128,58 @@
 	
 	<h5>安全衛生管理機制執行表</h5>
 	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
+		<table align="center" width="500">
 			<tr>
-				<td align="center"  bgcolor="#db5106" colspan="2" valign="middle" style="padding:8px;">
-					<p style="margin: 0; color: #FFF">台灣高鐵職業安全衛生政策</p>
-				</td>
-				
+				<th align="center" colspan="2">
+					台灣高鐵職業安全衛生政策
+				</th>
 			</tr>			
 			<tr>
 				<td align="center" width="30%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">目的</p>
+					目的
 				</td>
 				<td align="center" width="70%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">各單位安衛目標之達成程度
-					足夠之監督量測的資訊與結果之紀錄，以進行後續矯正及預防措施的分析</p>
+					各單位安衛目標之達成程度
+					足夠之監督量測的資訊與結果之紀錄，以進行後續矯正及預防措施的分析
 				</td>
 			</tr>		
 			<tr>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">主動性項目</p>
+					主動性項目
 				</td>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">安衛管理計畫、作業準則及適用之法規及其他要求事項的符合性</p>
+					安衛管理計畫、作業準則及適用之法規及其他要求事項的符合性
 				</td>
 			</tr>
 			<tr>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">被動性項目</p>
+					被動性項目
 				</td>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">不健康、事件及其他安衛績效不足之事證</p>
+					不健康、事件及其他安衛績效不足之事證
 				</td>
 			</tr>
 			<tr>
-				<td align="center"  bgcolor="#db5106" colspan="2" valign="middle" style="padding:8px;">
-					<p style="margin: 0; color: #FFF">職業安全衛生之稽核辦法</p>
-				</td>
-				
+				<th align="center"  bgcolor="#db5106" colspan="2" valign="middle" style="padding:8px;">
+					職業安全衛生之稽核辦法
+				</th>
 			</tr>
 			<tr>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">進行方式</p>
+					進行方式
 				</td>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">定期或不定期執行安衛管理系統稽核</p>
+					定期或不定期執行安衛管理系統稽核
 				</td>
 			</tr>
 			<tr>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">稽核範疇</p>
+					稽核範疇
 				</td>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">訂定範圍、頻率、方法與能力，及執行稽核工作與結果報告的責任與要求並應以下列事項為規劃依據：
+					訂定範圍、頻率、方法與能力，及執行稽核工作與結果報告的責任與要求並應以下列事項為規劃依據：
 						各單位作業的風險評估結果
-						以往的稽核結果</p>
+						以往的稽核結果
 				</td>
 			</tr>
 			
@@ -197,8 +195,77 @@
 
 
 	<h5>安衛管理目標</h5>
-	<img src="http://www.thsrc.com.tw/event/tmp/img/e11.jpg" style="width: 100%; display: block; margin: 0px auto">
-	<br><br>
+
+	<div style="overflow: auto" class="table_m">  
+		<table align="center" width="600">
+			<tr>
+				<th width="50%" colspan="3" rowspan="2">項目</th>
+				<th colspan="2">2015</th>
+				<th colspan="2">2016</th>
+			</tr>
+			<tr>
+				<td align="center">目標</td>
+				<td align="center">實際數據</td>
+				<td align="center">目標</td>
+				<td align="center">實際數據</td>
+			</tr>
+			<tr>
+				<td align="center" rowspan="4">公司員工</td>
+				<td align="center" rowspan="2">工作場所內職災</td>
+				<td align="center">職災人數</td>
+				<td align="center">0</td>
+				<td align="center">17</td>
+				<td align="center">7</td>
+				<td align="center">9</td>
+			</tr>
+			<tr>
+				<td align="center">失能日數</td>
+				<td align="center">0</td>
+				<td align="center">117</td>
+				<td align="center">75</td>
+				<td align="center">96</td>
+			</tr>
+			<tr>
+				<td align="center" rowspan="2">工作場所外交通職災</td>
+				<td align="center">職災人數</td>
+				<td align="center">< 8 人次</td>
+				<td align="center">21</td>
+				<td align="center">14</td>
+				<td align="center">16</td>
+			</tr> 			
+			<tr>
+				<td align="center" >失能日數</td>
+				<td align="center"> < 209 日  </td>
+				<td align="center">413</td>
+				<td align="center">378</td>
+				<td align="center">6,151</td>
+			</tr>
+			<tr>
+				<td widtd="40%" rowspan="3">承攬供應商</td>
+				<td align="center" colspan="2">死亡災害</td>
+				<td align="center">0</td>
+				<td align="center">0</td>
+				<td align="center">0</td>
+				<td align="center">0</td>
+			</tr>
+			<tr>
+				<td align="center"  colspan="2">罹災人數在三人以上之災害</td>
+				<td align="center">0</td>
+				<td align="center">0</td>
+				<td align="center">0</td>
+				<td align="center">0</td>
+			</tr>
+			<tr>
+				<td align="center"  colspan="2">罹災人數在一人以上且需住院治療之災害</td>
+				<td align="center">0</td>
+				<td align="center">1</td>
+				<td align="center">0</td>
+				<td align="center">2</td>
+			</tr>
+		
+		</table>
+	</div>
+
 
 	<div class="articleTitle">
 		<h2 class="articleTitleContent">安全管理措施與健康促進機制</h2>
@@ -209,63 +276,97 @@
 
 
 	<h5>健康檢查參與人數</h5>
-	<img src="http://www.thsrc.com.tw/event/tmp/img/e14.jpg" style="width: 100%; display: block; margin: 0px auto">
 
-	<br><br>
+	<div style="overflow: auto" class="table_m">  
+		<table align="center" width="700">
+			<tr>
+				<th width="20%" rowspan="2">類別</th>
+				<th colspan="3">2015</th>
+				<th colspan="3">2016</th>
+			</tr>
+			<tr>
+				<td align="center">應檢人數</td>
+				<td align="center">受檢人數 </td>
+				<td align="center">完成率</td>
+				<td align="center">應檢人數</td>
+				<td align="center">受檢人數 </td>
+				<td align="center">完成率</td>
+			</tr>
+			<tr>
+				<td align="center">一般人員</td>
+				<td align="center">1,296</td>
+				<td align="center">1,183</td>
+				<td align="center">91%</td>
+				<td align="center">1,720</td>
+				<td align="center">1,589</td>
+				<td align="center">92.38%</td>
+			</tr>					
+			<tr>
+				<td align="center">行車人員</td>
+				<td align="center">820</td>
+				<td align="center">820</td>
+				<td align="center">100%</td>
+				<td align="center">855</td>
+				<td align="center">839</td>
+				<td align="center">100%</td>
+			</tr> 		
+			
+		</table>
+	</div>
 
 	<h3>員工關懷措施</h3>
 	<p>為顧客提供貼心服務的同時，台灣高鐵的員工更是我們全心照顧的對象，訂定福利辦法建置完整員工福利制度，並依法設立職工福利委員會，辦理各項福利措施及運作，且定期透過參與外部顧問公司提供之市場調查，確保福利計畫之市場競爭力。</p>
 
 	<h5>台灣高鐵員工福利項目</h5>
 	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
+		<table align="center" width="600">
 			<tr>
-				<td align="center"  bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0;">福利類別</p>
-				</td>
-				<td align="center"  bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF">
-					<p style="margin: 0;">福利項目</p>
-				</td>
+				<th align="center" >
+					福利類別
+				</th>
+				<th align="center" >
+					福利項目
+				</th>
 				
 			</tr>			
 			<tr>
-				<td align="center" width="30%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">法定福利</p>
+				<td align="center" width="30%">
+					法定福利
 				</td>
-				<td align="center" width="70%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">特休、退休金、勞保、全民健保、體檢（優於法令）</p>
-				</td>
-			</tr>		
-			<tr>
-				<td align="center" width="30%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">育兒支持</p>
-				</td>
-				<td align="center" width="70%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">育嬰留職停薪、托兒安親合約機構、哺育室設備</p>
+				<td width="70%">
+					特休、退休金、勞保、全民健保、體檢（優於法令）
 				</td>
 			</tr>		
 			<tr>
-				<td align="center" width="30%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">工作生活平衡</p>
+				<td align="center" width="30%">
+					育兒支持
 				</td>
-				<td align="center" width="70%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">社團活動補助、旅遊活動補助、輪班人員的照顧</p>
-				</td>
-			</tr>		
-			<tr>
-				<td align="center" width="30%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">員工協助方案</p>
-				</td>
-				<td align="center" width="70%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">心理諮詢與醫療就醫協助</p>
+				<td width="70%">
+					育嬰留職停薪、托兒安親合約機構、哺育室設備
 				</td>
 			</tr>		
 			<tr>
-				<td align="center" width="30%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">生活支持</p>
+				<td align="center" width="30%">
+					工作生活平衡
 				</td>
-				<td align="center" width="70%" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
-					<p style="margin: 0">團保、旅平險、喪葬補助與撫恤、喜幛輓聯、遷調補助、急難救助、員工傷病慰問及關懷、年節贈禮、生日禮金</p>
+				<td width="70%">
+					社團活動補助、旅遊活動補助、輪班人員的照顧
+				</td>
+			</tr>		
+			<tr>
+				<td align="center" width="30%">
+					員工協助方案
+				</td>
+				<td width="70%">
+					心理諮詢與醫療就醫協助
+				</td>
+			</tr>		
+			<tr>
+				<td align="center" width="30%">
+					生活支持
+				</td>
+				<td width="70%">
+					團保、旅平險、喪葬補助與撫恤、喜幛輓聯、遷調補助、急難救助、員工傷病慰問及關懷、年節贈禮、生日禮金
 				</td>
 			</tr>		
 		</table>
