table and title

--- a/views/a03_永續經營_m.twig
+++ b/views/a03_永續經營_m.twig
@@ -7,7 +7,9 @@
 <p>台灣高鐵財務改善方案從2014年10月24日提出後，歷經一連串的法律流程及調整後，於2015 年6 月5 日經立法院院會通過備查，而此版本的「高鐵財務解決方案」及立法院交通委員會附帶決議即成為落實台灣高鐵財務改善之依據及基礎。為讓大眾更了解我們財務方案之變革，展現永續經營的服務精神，下面特以圖說明財務解決方案架構。
 </p>
 
-<h3>財務解決方案架構</h3>
+<div class="articleTitle">
+	<h2 class="articleTitleContent">財務解決方案架構</h2>
+</div>
 
 <img src="http://www.thsrc.com.tw/event/tmp/img/a03-01.jpg" alt="" style="width: 90%; display: block; margin: 0 auto">
 
@@ -15,8 +17,8 @@
 	<h2 class="articleTitleContent">財務解決方案執行狀況及時程</h2>
 </div>
 
-<div style="overflow: auto" class="table_m">
-	<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; " width="900">
+	<div style="overflow: auto" class="table_m">  
+		<table align="center" width="900">
 		<tr align="center" bgcolor="#ff6600" style="color: rgb(255, 255, 255);" valign="middle">
 			<th style="width:20%">日期</th>
 			<th style="width:80%">事件</th>
