--- a/views/c03_能源與廢棄物管理_m.twig
+++ b/views/c03_能源與廢棄物管理_m.twig
@@ -38,17 +38,17 @@
 	<p>台灣高鐵於2014年11月成為國內首家取得「運輸服務碳足跡標籤」之交通運具，並在企業網站「企業社會責任專區」下建置「高速鐵路運輸服務碳足跡」專頁、在車上刊物T-Life及高鐵車票揭露碳標籤。台灣高鐵委託第三公證單位查驗，認證碳足跡為每人每公里運輸服務產生相當於38公克二氧化碳的溫室氣體排放量，約為小客車的1/2；若以高鐵2015年全年度載運之旅客里程數計算，較搭乘小客車大幅減少386,198公噸的二氧化碳量，相當於1,302 座大安森林公園的植樹面積；2016年較搭乘小客車減少419,534公噸的二氧化碳量，相當於1,414座大安森林公園的植樹面積。另配合苗栗、彰化、雲林及南港站開始營運，將於2017年12月16日碳標籤有效期限前，辦理盤查並查證高鐵運輸服務碳足跡，並向行政院環境保護署申請碳標籤效期展延3年。
 	</p>
 
-	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; " width="500">
+		<div style="overflow: auto" class="table_m">  
+		<table align="center" width="500">
 			<tr >
-				<th>
+				<td>
 					<img src="http://www.thsrc.com.tw/event/tmp/img/b17.jpg" alt="" style=" display: block; margin: 0 auto">
 					<p style="text-align: center; margin-top: 10px">碳足跡標籤</p>
-				</th>
-				<th>
+				</td>
+				<td>
 					<img src="http://www.thsrc.com.tw/event/tmp/img/b18.jpg" alt="" style=" display: block; margin: 0 auto">
 					<p style="text-align: center; margin-top: 10px">碳足跡標籤證書授證典禮</p>
-				</th>
+				</td>
 			</tr>
 					
 			
@@ -61,14 +61,14 @@
 	<p>在水資源保護上，我們以節約用水、減量及回收再利用為用水管理政策。透過「節能專案小組」並定期（每季）召開場站節水成效檢討會議，並訂定隨列車旅次成長平均服務每名旅客用水量為節水指標。台灣高鐵車站、基地（含燕巢總機廠）及總公司之用水來源，皆為自來水，並無使用地下水。</p>
 
 	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; ">
+		<table align="center" width="700">
 			<tr >
-				<td bgcolor="#db5106" style="color: #FFF; width:30%">
+				<th bgcolor="#db5106" style="color: #FFF; width:30%">
 					<p>碳足跡標籤</p>
-				</td>
-				<td bgcolor="#db5106" style="color: #FFF; width:30%">
+				</th>
+				<th bgcolor="#db5106" style="color: #FFF; width:30%">
 					<p>碳足跡標籤證書授證典禮</p>
-				</td>
+				</th>
 			</tr>			
 			<tr >
 				<td>
@@ -92,19 +92,23 @@
 		</table>
 	</div>
 	
-	<h3>而節水措施的效益如下：</h3>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">而節水措施的效益如下：</h2>
+	</div>
+
 		<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
+		<table align="center" width="500">
 			<tr >
-				<td bgcolor="#db5106" style="color: #FFF; width:30%">
+				<th bgcolor="#db5106" style="color: #FFF; width:30%">
 					<p>基地之節水效益</p>
-				</td >
-				<td bgcolor="#db5106" style="color: #FFF; width:30%">
+				</th >
+				<th bgcolor="#db5106" style="color: #FFF; width:30%">
 					<p>車站之節水效益</p>
-				</td>
-				<td bgcolor="#db5106" style="color: #FFF; width:40%">
+				</th>
+				<th bgcolor="#db5106" style="color: #FFF; width:40%">
 					<p>全公司之節水效益</p>
-				</td>
+				</th>
 			</tr>
 			<tr >
 				<td>
@@ -128,14 +132,14 @@
 	<p>台灣高鐵除積極執行行車運輸的低碳措施，也從營運面做起，在各辦公大樓推動節能環保措施，支持環境永續不遺餘力。</p>
 	
 	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
+		<table align="center" width="500">
 			<tr >
-				<td bgcolor="#db5106" style="color: #FFF; width:50%">
+				<th>
 					<p>「公文管理系統」線上簽核</p>
-				</td >
-				<td bgcolor="#db5106" style="color: #FFF; width:50%">
+				</th >
+				<th>
 					<p>高鐵總公司實施空調、照明和電力系統的節約能源措施</p>
-				</td>
+				</th>
 				
 			</tr>
 			<tr >
