--- a/views/d01_安全運輸_m.twig
+++ b/views/d01_安全運輸_m.twig
@@ -132,7 +132,11 @@
 	<p>台灣高鐵除依據安全與品質系統管理架構出公司品質脈絡外，也採用形態管理（Configuration Management），作為安全與品質管控的管理機制。同時參照ISO 10007 形態管理指導綱要，識別並建立高速鐵路系統之八大主要系統形態基線（Configuration Baseline）資料，分類列管高鐵系統形態項目，並將持續辦理形態變更管制、形態稽核以及形態狀況報告等形態管理活動。
 	</p>
 
-	<h3>形態基線鑑識內容</h3>
+
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">形態基線鑑識內容</h2>
+	</div>
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" >
 			<tr>
@@ -183,8 +187,9 @@
 	<p>台灣高鐵自2008年起於內部宣導並建立量化之品質主要績效指標 （QKPI），以持續改進各項作業，亦自2011年起每季追蹤各單位QKPI執行情形，並針對未達目標之相關作業，進行檢討與作業改進。我們經由各項品質監督及品質稽核作業，確保高鐵營運在旅客安全、可靠、效率及顧客滿意度等四大類別績效達成目標。自營運迄今未有歸責於高鐵營運而致旅客發生重傷及死亡之案件，受傷率指標均達成目標。
 	</p>
 
-
-	<h3>品質績效指標</h3>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">品質績效指標</h2>
+	</div>
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="800">
 			<tr>
@@ -492,7 +497,11 @@
 	</p>
 
 
-	<h3>危害審查小組會議鑑別成果</h3>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">危害審查小組會議鑑別成果</h2>
+	</div>
+
+
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="400">
 			<tr>
