--- a/views/e01_供應鏈管理_m.twig
+++ b/views/e01_供應鏈管理_m.twig
@@ -41,8 +41,10 @@
 
 	<p>台灣高鐵也在勞務採購上積極採用在地供應商。在2015與2016年中，在地供應商採購比例為89.05%以及89.36%，接近9成勞務採購都採用在地供應商。</p>
 
-	<h5>2015與2016在地勞務採購金額比例</h5>
-	<div style="overflow: auto" class="table_m">  
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">2015與2016在地勞務採購金額比例</h2>
+	</div>
+		<div style="overflow: auto" class="table_m">  
 		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="700">
 			<tr>
 				<th bgcolor="#db5106" scope="col" style="padding:8px; color:#FFF;" width="30%"></th>
