--- a/views/f01_人才培育_m.twig
+++ b/views/f01_人才培育_m.twig
@@ -9,7 +9,10 @@
 	<h3>孕育人才，價值培育</h3>
 	<p>身為國內鐵路產業中唯一的高速鐵路營運公司，員工為我們的核心動能之一，培育專業人才為我們重要使命。為因應新站的設立及優化員工勞動時數的調配，我們於2016年大幅提升總員工數量，兼顧業務需求及員工期許。</p>
 	
-	<h5>人力結構</h5>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">人力結構</h2>
+	</div>	
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" width="500">
 			<tr>
@@ -57,7 +60,10 @@
 	<h3>包容性的員工任用</h3>
 	<p>近年台灣高鐵積極提升員工向心力，且搭配著財務改善計畫及公司上市等變革，2015和2016年的離職比例有顯著下降。</p>
 
-	<h5>新進員工統計</h5>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">新進員工統計</h2>
+	</div>
 
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" width="800">
@@ -190,7 +196,9 @@
 	</div>
 
 
-	<h5>離職員工統計</h5>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">離職員工統計</h2>
+	</div>
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" width="800">
 			<tr>
@@ -325,7 +333,11 @@
 	<p>在身障者進用方面，除在招募網站上設置身心障礙人員招募專區，更根據不同職務特性，聘任身心障礙員工，在2015與2016年分別雇用32名、53名身障者員工，符合身障者權益保護法要求。而在原住民進用方面，雖致力於滿足法規要求，但2015年原住民進用人數仍不足3名，故積極與原住民委員會連繫推薦人選，2016年共進用43名原住民，達成進用目標。未來將持續透過各種管道進行招募，確保員工多元性。</p>
 	<p>員工敘薪上，台灣高鐵皆依工作經驗、學經歷、專長及證照等核定待遇，在薪資待遇上不會因性別或族群而有所差異，亦藉由透明化薪酬政策，將營運績效回饋給員工。不論管理階層或一般員工女男比例上，除因一般員工男性部分多為技術專業等薪資較高人員，相較於管理階層女男薪酬較一般員工平均差異高。</p>
 	
-	<h5>女男薪酬比</h5>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">女男薪酬比</h2>
+	</div>
+
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
 			<tr>
@@ -392,7 +404,11 @@
 	</div>
 	<p>台灣高鐵的訓練體系分為兩大主軸，分別為「安全」與「服務」，並在高鐵專屬的訓練系列課程中導入核心職能、專業職能、管理職能及工作效能等四大職能構面，以內部講師為骨幹，提供完整的職能訓練體系課程。</p>
 
-	<h5>四大職能訓練溝面</h5>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">四大職能訓練溝面</h2>
+	</div>
+
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
 			<tr>
@@ -544,7 +560,9 @@
 	<img src="http://www.thsrc.com.tw/event/tmp/img/e08.jpg" style="width: 80%; display: block; margin: 0px auto">
 	<p style="text-align: center; margin-top: 0px">高雄第一科技大學鐵道設備實驗室揭牌</p>
 
-	<h5>產學合作備忘錄</h5>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">產學合作備忘錄</h2>
+	</div>
 	<p>自2012年起，台灣高鐵除與國立高雄第一科技大學及臺北科技大學簽訂合作備忘錄，也與國內多所學校簽訂合作備忘錄，透過交流、專案合作和研討會等方式生根技術。</p>
 
 
