--- a/views/f03_關懷社會_m.twig
+++ b/views/f03_關懷社會_m.twig
@@ -10,7 +10,10 @@
 	<h5>發展平台</h5>
 	<p>台灣高鐵不僅是最便捷的交通工具，更是文化創意推動平台，為使車站與地方產生深入聯結，2015年起規劃「藝起來高鐵」，透過藝文展演的人文魅力為車站塑造美麗記憶，邀請具表演經驗的學校、藝術團體或個人，於車站進行每場30分鐘的演出，已為各界所肯定，成為表演團體展現所學之優先平台，總是吸引旅客停下腳步欣賞，以樂舞乘載的歡快，導引台灣社會邁向藝文新生活。</p>
 
-	<h5>藝起來高鐵活動成果表</h5>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">藝起來高鐵活動成果表</h2>
+	</div>
+
 	<div style="overflow: auto" class="table_m">  
 		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
 
