--- a/views/b03_顧客肯定_m.twig
+++ b/views/b03_顧客肯定_m.twig
@@ -7,13 +7,13 @@
 	<h1 class="title_h2">顧客肯定</h1>
 	
 	<p>台灣高鐵品質管理的三個核心主軸之一即為顧客服務，並設立一系列對應的量化績效指標，每季追蹤。自2007年通車起，每年均委託第三方單位進行顧客滿意度調查。依據當次搭乘高鐵的旅客為對象，透過問卷，瞭解旅客對我們所提供的各項服務滿意度的評分（5分「非常滿意」，1分「非常不滿意」。滿意度係回答5分與4分所占百分比），定期追蹤執行狀況，列為未來改善的規劃考量。</p>
-	<div style="overflow: auto" class="table_m">  
-		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; " width="100%">
+		<div style="overflow: auto" class="table_m">  
+		<table align="center" width="700">
 			<tr >
-				<td bgcolor="#db5106" style="color: #FFF; width:30%; ">項目</th>
-				<td bgcolor="#db5106" style="color: #FFF; width:20%">2014</th>
-				<td bgcolor="#db5106" style="color: #FFF; width:20%">2015</th>
-				<td bgcolor="#db5106" style="color: #FFF; width:20%">2016</th>
+				<th width="30%">項目</th>
+				<th width="20%">2014</th>
+				<th width="20%">2015</th>
+				<th width="20%">2016</th>
 			</tr>
 			<tr >
 				<td>車站高鐵旅客滿意度問卷回收數</td>
