--- a/views/b01_營運據點與服務_m.twig
+++ b/views/b01_營運據點與服務_m.twig
@@ -132,11 +132,11 @@
 		<div style="overflow: auto" class="table_m">  
 			<table align="center" width="700">
 			<tr >
-				<td>
+				<td align="center">
 					<img src="http://www.thsrc.com.tw/event/tmp/img/b08.jpg" alt="">
 					<p>SMIS系統畫面</p>
 				</td>
-				<td>
+				<td align="center">
 					<img src="http://www.thsrc.com.tw/event/tmp/img/b09.jpg" alt="">
 					<p>SMIS之經濟部專利證書</p> 
 				</td>
@@ -154,7 +154,32 @@
 
 	<h6 class="articleTitleContent">轉運服務</h6>
 	<p>台灣高鐵轉乘服務搭配大眾交通工具，在每個營運據點提供旅客接駁服務，並且製作各車站轉乘地圖、建置轉乘資訊系統，並於高鐵企業網站提供各車站轉乘資訊查詢。</p>
-	<img src="http://www.thsrc.com.tw/event/tmp/img/b11.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+
+		<div style="overflow: auto" class="table_m">  
+			<table align="center" width="500">
+				<tr >
+					<th align="center" style="width:25%"></th>
+					<th style="width:25%"></th>
+					<th style="width:50%" colspan="2">實際值</th>
+				</tr>
+				<tr >
+					<td align="center">指標</td>
+					<td align="center">單位</td>
+					<td align="center">2015</td>
+					<td align="center">2016</td>
+				</tr>
+				<tr >
+					<td align="center">快捷公車轉運人次輸</td>
+					<td align="center">千人次</td>
+					<td align="center">4,859 </td>
+					<td align="center">5,110 </td>
+				</tr>
+				
+			</table>
+		</div>
+
+
+
 	<p style="text-align: center; margin-top: -10px">快捷公車轉運人次</p>
 
 	<p>在2016年因應復興航空歇業，為了讓旅客可以順利前往花蓮，依據高鐵與臺鐵互相接駁之適當班次，製作「台北-花蓮雙鐵轉乘時刻表」，放置於車站服務台，提供旅客參考。</p>
@@ -196,7 +221,98 @@
 	<h6>班表政策與疏運</h6>
 	<p>台灣高鐵目前可提供運轉服務的列車計34組，列車時刻表規劃係配合不同時段之旅運需求，盡量將列車組資源投入載客之營運，提供最大運能以滿足高鐵旅運需求</p>
 
-	<img src="http://www.thsrc.com.tw/event/tmp/img/b12.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+		
+	<div style="overflow: auto" class="table_m">  
+		<table align="center" width="800">
+			<tr >
+				<th align="center" rowspan="2">指標</th>
+				<th align="center" rowspan="2" >單位</th>
+				<th align="center" colspan="3">實際值</th>
+				<th align="center"nb colspan="3">目標值/預估值</th>
+			
+			</tr>
+			<tr >
+				<td align="center" >2014</td>
+				<td align="center" >2015</td>
+				<td align="center" >2016</td>
+				<td align="center" >2015</td>
+				<td align="center" >2016</td>
+				<td align="center" >2017</td>
+			</tr>
+			<tr >
+				<td align="center">發車班次數</td>
+				<td align="center">班次數</td>
+				<td align="center">50,467</td>
+				<td align="center">50,532</td>
+				<td align="center">51,106</td>
+				<td align="center">50,629</td>
+				<td align="center">51,670</td>
+				<td align="center">51,199</td>
+			</tr>	
+			<tr >
+				<td align="center">旅客量</td>
+				<td align="center">千人次</td>
+				<td align="center">48,025</td>
+				<td align="center">50,562</td>
+				<td align="center">56,586</td>
+				<td align="center">50,000</td>
+				<td align="center">52,435</td>
+				<td align="center">57,757</td>
+			</tr> 							
+			<tr >
+				<td align="center">列車準點率（五分鐘，不含天災）</td>
+				<td align="center">%</td>
+				<td align="center">99.61</td>
+				<td align="center">99.66</td>
+				<td align="center">99.58</td>
+				<td align="center">98.90</td>
+				<td align="center">99.00</td>
+				<td align="center">99.10</td>
+			</tr> 							
+			<tr >
+				<td align="center">列車發車率（不含天災）</td>
+				<td align="center">%</td>
+				<td align="center">99.96</td>
+				<td align="center">100.00</td>
+				<td align="center">100.00</td>
+				<td align="center">99.60</td>
+				<td align="center">99.60</td>
+				<td align="center">99.60</td>
+			</tr>							
+			<tr >
+				<td align="center">每日雙向發車最高</td>
+				<td align="center">班次數</td>
+				<td align="center">153</td>
+				<td align="center">159</td>
+				<td align="center">158</td>
+				<td align="center">NA</td>
+				<td align="center">同左</td>
+				<td align="center">同左</td>
+			</tr>  						
+			<tr >
+				<td align="center">連續假期期間單日雙向最大</td>
+				<td align="center">班次數</td>
+				<td align="center">192</td>
+				<td align="center">195</td>
+				<td align="center">197</td>
+				<td align="center">NA</td>
+				<td align="center">同左</td>
+				<td align="center">同左</td>
+			</tr>							
+			<tr >
+				<td align="center">平均每日旅次數</td>
+				<td align="center">人次</td>
+				<td align="center">131,575</td>
+				<td align="center">138,526</td>
+				<td align="center">154,607</td>
+				<td align="center">137,000</td>
+				<td align="center">N/A</td>
+				<td align="center">N/A</td>
+			</tr>							
+			
+		</table>
+	</div>
+
 	<p style="text-align: center; argin-top: -10px">營運績效表</p>
 	
 	<p>本公司各疏運計畫皆經過嚴謹的內部程序制定，並提報交通部備查後執行，2015和2016年計有元旦、春節、和平紀念日、清明節、勞動節、母親節、端午節、中秋節、國慶日等重要疏運計畫，總計2015年及2016年共分別疏運839.5萬人次及1,160.4萬人次。
