--- a/views/d01_安全運輸.twig
+++ b/views/d01_安全運輸.twig
@@ -426,9 +426,9 @@
 		<table width="100%">
 			<tr>
 				<th bgcolor="#EFEFEF" scope="col" rowspan="5" style="padding:8px;" width="25%">2016年</th>
-				<td align="center" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF;" width="25%">類別</td>
-				<td align="center" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF;" width="25%">週期</td>
-				<td align="center" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF;" width="25%">維修量</td>
+				<th align="center" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF;" width="25%">類別</th>
+				<th align="center" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF;" width="25%">週期</th>
+				<th align="center" bgcolor="#db5106" valign="middle" style="padding:8px; color: #FFF;" width="25%">維修量</th>
 			</tr>
 			<tr>
 				<td align="center" bgcolor="#EFEFEF" valign="middle" style="padding:8px;">
